--- a/1-Java基础/1-00【Java基础2】.md
+++ b/1-Java基础/1-00【Java基础2】.md
@@ -216,7 +216,7 @@ Lombok，一个Java类库，提供了一组注解，简化POJO实体类开发。
    }
    ```
 
-Lombok只是简化模型类的编写，我们之前的方法也能用，如果只想要有name和password的构造函数，那就自行编写：
+Lombok 只是简化模型类的编写，如果只想要有 name 和 password 的构造函数，那就自行编写：
 
 ```java
 @Data
