--- a/1-Java基础/1-14【反射、注解】.md
+++ b/1-Java基础/1-14【反射、注解】.md
@@ -912,11 +912,7 @@ public class TestMyCheck {
 
 ## 3.6 多重注解【jdk1.8】
 
-在JDK1.8之后标注在类，方法等上面的注解可以重复出现，如下图
-
-![在这里插入图片描述](D:\Java\笔记\图片\Java版本\多重注解)
-
-但是如果你直接在方法等上面注多个相同的注解，程序还是会报错，错误信息提示注解`MyAnnotation`没有被一个`Repeatable`注解修饰，而`Repeatable`注解里面传入的参数必须也是一个注解，这个注解所包含的值必须有一个要重复注解的这个注解类型的数组。
+在JDK1.8之后标注在类，方法等上面的注解可以重复出现。但是如果你直接在方法等上面注多个相同的注解，程序还是会报错，错误信息提示注解`MyAnnotation`没有被一个`Repeatable`注解修饰，而`Repeatable`注解里面传入的参数必须也是一个注解，这个注解所包含的值必须有一个要重复注解的这个注解类型的数组。
 
 我们同样可以和以前一样通过反射得到注解的值，如下代码
 
