--- a/6-扩展/6-03【计算机网络-基础】.md
+++ b/6-扩展/6-03【计算机网络-基础】.md
@@ -1,341 +1,481 @@
-# 第六章 网络编程基础知识
+# 第一章 基础概念
 
-## 6.1 什么是数字证书
+[中国互联网网络信息中心](https://www.cnnic.net.cn/) CNNIC（China Internet Network Information Center）：经国家主管部门批准，于1997年6月3日组建的管理和服务机构，行使国家互联网络信息中心的职责。
 
-服务端可以向证书颁发机构 CA 申请证书，以避免中间人攻击（防止证书被篡改）。证书包含三部分内容：证书内容、证书签名算法和签名，签名是为了验证身份。
+## 1.1 因特网概述
 
-![](D:\Java\笔记\图片\1-11【网络编程】\数字证书.png)
+网络（Network）由若干节点（Node）和连接这些节点的链路（Link）组成。多个网络可以通过路由器互连起来，这样就构成了一个覆盖范围更大的网络，即互连网/互联网。因此，互连网是*网络的网络*（Network of Networks）
 
-服务端把证书传输给浏览器，浏览器从证书里取公钥。证书可以证明该公钥对应本网站。
+因特网（Internet）是世界上最大的互连网络，用户数以亿计，互联的网络数以百万计。
 
-**数字签名的制作过程**：
+* internet（互连网或互联网）是一个通用名词，它泛指由多个计算机网络互连而成的网络。在这些网络之间的通信协议可以是任意的。
+* Internet（因特网）是一个专用名词，它指当前全球最大的、开放的、由众多网络相互连接而成的特定计算机网络，它采用TCP/IP协议族作为通信的规则，其前身是美国的ARPANET。
 
-1. CA 使用证书签名算法对证书内容进行 hash 运算。
-2. 对 hash 后的值用 CA 的私钥加密，得到数字签名。
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-1.png)
 
-**浏览器验证过程**：
+**因特网发展的三个阶段**
 
-1. 获取证书，得到证书内容、证书签名算法和数字签名。
-2. 用 CA 机构的公钥对数字签名解密（由于是浏览器信任的机构，所以浏览器会保存它的公钥）。
-3. 用证书里的签名算法对证书内容进行 hash 运算。
-4. 比较解密后的数字签名和对证书内容做 hash 运算后得到的哈希值，相等则表明证书可信。
+因特网的发展大致分为三个阶段：1969年从单个网络ARPANET向互联网发展、1985年逐步建成三级结构的因特网、1993年逐步形成了多层次ISP结构的因特网。下面每三个时间代表一个阶段：
 
-## 6.2 DNS 域名解析
+* 1969年，第一个分组交换网ARPANET诞生；
+* 70年代中期，开始研究多种网络之间的互联；
+* 1983年，TCP/IP成为ARPANET的标准协议，因此也被成为因特网诞生时间；
+* 1985年，美国国家科学基金会 [NSF](https://www.nsf.gov/)（National Science Foundation，United States）围绕六个大型计算中心建设国家科学基金网 NSFNET。NSFNET是一个三级的网络结构，分为主干网、地区网、校园网/企业网；
+* 1990年，ARPANET 任务完成，正式关闭；
+* 1991年，美国政府将因特网主干网交给私人公司经营，并开始对接入因特网的单位收费；
+* 1993年，NSFNET 逐渐被若干个商用因特网主干网替代，美国政府机构不再负责因特网运行，让各种因特网服务提供者 ISP（Internet Service Provider）来运营；
+* 1994年，欧洲原子核研究组织开发的万维网WWW技术促使因特网迅猛发展；
+* 1995年，NSFNET 停止运作，因特网彻底商业化。
 
-**DNS（Domain Name System）是域名系统的英文缩写，是一种组织成域层次结构的计算机和网络服务命名系统，用于 TCP/IP 网络。**
+因特网服务提供者ISP（Internet Service Provider）：提供给用户 IP 地址的角色，每个用户通过 ISP 提供的 IP 地址使用互联网，没有IP地址不可以使用互联网。例如电信、移动、联通等。
 
-通常我们有两种方式识别主机：**通过主机名或者 IP 地址**。人们喜欢便于记忆的主机名表示，而路由器则喜欢定长的、有着层次结构的 IP 地址。为了满足这些不同的偏好，我们就需要一种能够进行主机名到IP 地址转换的目录服务，**域名系统作为将域名和 IP 地址相互映射的一个分布式数据库，能够使人更方便地访问互联网。**
+**因特网的组成**
 
-因此，即使不使用域名也可以通过IP地址来寻址目的主机，但域名与IP地址相比，便于人们记忆。因此对于大多数网络应用，我们一般使用域名来访问目的主机，而不是直接使用IP地址来访问。
+因特网可以大致分为两个部分：边缘部分、核心部分。
 
-------
+- 边缘部分：由所有连接在因特网的主机组成，是用户直接使用的，用来通信和资源共享的设备。
+- 核心部分：由大量网络和连接这些网络的路由器组成，这部分是为边缘服务提供服务的，提供连通性和交换。
 
-当我们在浏览器地址栏中输入某个Web服务器的域名时。用户主机首先用户主机会首先在自己的DNS高速缓存中查找该域名所应的IP地址。
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-2.png)
 
-如果没有找到，则会向网络中的某台DNS服务器查询，DNS服务器中有域名和IP地映射关系的数据库。当DNS服务器收到DNS查询报文后，在其数据库中查询，之后将查询结果发送给用户主机。
+## 1.2 数据交换方式
 
-现在，用户主机中的浏览器可以通过Web服务器的IP地址对其进行访问了。
+网络中传输数据一共由三种方式：电路交换（Circuit Switching）、报文交换、分组交换（Paket Switching）。目前互联网使用的交换方式是分组交换。
 
-### 域名的层级关系
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-3.png)
 
-层级关系特点：
+**电路交换（Circuit Switching）**
 
-- 因特网采用层次树状结构的域名结构
+电话交换机接通电话线的方式称为电路交换。从通信资源的分配角度来看，交换（Switching）就是按照某种方式动态的分配传输线路的资源。
 
-- 域名的结构由若干个分量组成，各分量之间用“点”隔开，分别代表不同级别的域名。
+在电路交换过程中要先进行建立连接，连接建立完成后直接进行报文传输，传输完成后释放连接。传输时以比特流直通形式传输。
 
-- - 每一级的域名都由英文字母和数字组成，不超过63个字符，不区分大小写字母。
-  - 级别最低的域名写在最左边，而级别最高的顶级域名写在最右边。
-  - 完整的域名不超过255个字符。
+**报文交换（Message Switching）**
 
-- 域名系统既不规定一个域名需要包含多少个下级域名，也不规定每一级的域名代表什么意思。
+每一个结点接收整个报文，检查目标结点地址，然后根据网络中的通信情况在适当的时候转发到下一个结点。经过多次的存储——转发，最后到达目标，因而这样的网络叫存储——转发网络。其中的交换结点要有足够大的存储空间（一般是磁盘），用以缓冲收到的长报文。
 
-- 各级域名由其上一级的域名管理机构管理，而最高的顶级域名则由因特网名称与数字地址分配机构ICANN进行管理。
+在报文交换中，把整个报文先传送到相邻节点交换机，节点交换机进行储存下来后进行查表转发，转发到下一个节点交换机。
 
-域名服务器可以划分为以下四种不同的类型：
+**分组交换（Paket Switching）**
 
-- **根域名服务器** 根域名服务器是最高层次的域名服务器。每个根域名服务器都知道所有的顶级域名服务器的域名及其IP地址。因特网上共有13个不同IP地址的根域名服务器。当本地域名服务器向根域名服务器发出查询请求时，路由器就把查询请求报文转发到离这个DNS客户最近的一个根域名服务器。这就加快了DNS的查询过程，同时也更合理地利用了因特网的资源。
-- **顶级域名服务器** 这些域名服务器负责管理在该顶级域名服务器注册的所有二级域名。当收到DNS查询请求时就给出相应的回答（可能是最后的结果，也可能是下一级权限域名服务器的IP地址)。
-- **权限域名服务器** 这些域名服务器负责管理某个区的域名。每一个主机的域名都必须在某个权限域名服务器处注册登记。因此权限域名服务器知道其管辖的域名与IP地址的映射关系。另外，权限域名服务器还知道其下级域名服务器的地址。
-- **本地域名服务器** 本地域名服务器不属于上述的域名服务器的等级结构。当一个主机发出DNS请求报文时，这个报文就首先被送往该主机的本地域名服务器。本地域名服务器起着代理的作用，会将该报文转发到上述的域名服务器的等级结构中。本地域名服务器离用户较近，一般不超过几个路由器的距离，也有可能就在同一个局域网中。本地域名服务器的IP地址需要直接配置在需要域名解析的主机中。
+| 分组交换中角色 |        作用        |
+| :------------: | :----------------: |
+|     发送方     | 构造分组、发送分组 |
+| 路由器/交换机  | 缓存分组、转发分组 |
+|     接收方     | 接收分组、还原报文 |
 
-### DNS 域名解析过程
+- 发送方：把整块数据/信息分为多个数据段（相对于报文传输而言），数据段分开传输。在数据段前面加上首部后，成为一个分组。以分组为单位传输。
+- 路由器：各个分组交换机会把分组先存储下来，然后根据其头部信息中的目的地址，发送给下一个交换机。各个交换机进行对分组信息的储存转发后，最终到达目的主机。
+- 接收方：目的地处理及再去除分组首部，还原出报文。传输完成。
 
-域名解析包含两种查询方式，分别是**递归查询**和**迭代查询**。
+分组交换可以随时发送分组，不需要事先建立连接。
 
-#### 递归查询
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-4.png)
 
-“递归解析”是最常见也是默认的一种解析方式。在这种解析方式中，如果客户端配置的本地域名服务器（Local DNS服务器）不能解析的话，则后面的查询过程全部**由本地域名服务器代替DNS客户端进行查询**，直到本地域名服务器从权威域名服务器得到了正确的解析结果，然后由本地域名服务器告诉DNS客户端查询的结果。
+## 1.3 计算机网络分类
 
-在整个递归查询过程中，除一开始客户端向本地域名服务器发起查询请求外，其余各个环节均是以本地域名服务器为中心进行迭代查询，DNS客户端一直处于等待状态，直到本地域名服务器发回最终查询结果。相当于，在整个查询环节中本地域名服务器承担了中介代理的角色。
+计算机网络主要是一些通用的、可编程的硬件互连而成的，而硬件并非专门用来实现某一特定目的的，这些可编程的硬件能够用来传送多种不同类型的数据（如音频、数据），这些可编程的软件能支持广泛和日益增长的应用。
 
-1. 客户端向本机配置的本地域名服务器发起DNS域名查询请求；
+### 1.3.1 常见分类方式
 
-2. 本地域名服务器收到请求后，会先查询本地缓存，如果有记录值会直接返回给客户端；如果没有记录，则本地域名服务器会向根域名服务器发起请求；
+- 按照交换技术可将计算机网络分为：电路交换网络、报文交换网络、分组交换网络。
+- 按照使用者可将计算机网络分为：公用网、专用网。
+  - 公用网指的是电信公司构建的大型网络，面对公众开放，只要交钱既可使用，又叫公众网。
+  - 专用网指的是某个部门为本单位的特殊业务工作需要而建造的网络。例如铁路部门、电信部门专门为自己构建的，不对外开放的网络。
+- 按照传输介质可将计算机网络分为：有线网络、无线网络。
+  - 有线网络主要双绞线(日常使用网线)、光纤。
+  - 无线网络主要是WIFI。
+- 按照拓扑结构分类：总线型网络、星形网络、环形网络、网状型网络。
 
-3. 根域名服务器收到请求后，会根据所要查询域名中的后缀将所对应的顶级域名服务器（如.com、.cn等）返回给本地域名服务器；
+### 1.3.2 覆盖范围分类
 
-4. 本地域名服务器根据返回结果向所对应的顶级域名服务器发起查询请求；
+按照覆盖范围可将计算机网络分为：广域网WAN（Wide Area Network）、城域网MAN（Metropolitan Area Network）、局域网LAN（Local Area Network）、个域网PAN（Personal Area Network）。
 
-5. 对应的顶级域名服务器在收到DNS查询请求后，也是先查询自己的缓存，如果有所请求域名的解析记录，则会直接将记录返回给本地域名服务器，然后本地域名服务器再将记录返回给客户端，完成整个DNS解析过程。
+**广域网**
 
-6. 如果顶级域名服务器没有记录值，就会将二级域名对应的服务器地址返回给本地域名服务器，本地域名服务器再次对二级域名服务器发起请求，如此类推，直到最终对应区域的权威域名服务器返回结果给本地域名服务器。然后本地域名服务器将记录值返回给DNS客户端，同时缓存本地查询记录，以便在TTL值内用户再次查询时直接将记录返回给客户端。
+广域网 WAN（Wide Area Network），又称广域网、外网、公网。是连接不同地区局域网或城域网计算机通信的远程网。通常跨接很大的物理范围，所覆盖的范围从几十公里到几千公里，它能连接多个地区、城市和国家，或横跨几个洲并能提供远距离通信，形成国际性的远程网络。
 
-#### 迭代查询
+**城域网**
 
-从上面的介绍中我们看到了，递归查询除在一开始客户端发起查询请求外，其他环节都是由本地域名服务器代替客户端进行的。而**迭代查询则是指所有查询工作全部由客户端自己进行**，除此之外，整个查询路径和步骤与递归查询没有太大区别。
+城域网 MAN（Metropolitan Area Network）是在一个城市范围内所建立的计算机通信网，作用距离约为5~50km，属宽带局域网。采用具有有源交换元件的局域网技术，网中传输时延较小，它的传输媒介主要采用光缆，传输速率在100Mbit/s以上。
 
-首先客户端向本地域名服务器发起请求，如果本地域名服务器没有缓存记录，客户端便会依次对根域名服务器、顶级域名服务器和二级域名服务器等发起迭代查询，直到获得最终的查询结果。
+**局域网**
 
-在以下条件之一满足时，就会采用迭代解析方式：
+局域网 LAN（Local Area Network）一般用微型计算机或工作站通过高速通信线路相连（速率通常在10Mbit/s以上），但地理上则局限在较小的范围，如1km左右。
 
-1. 在查询本地域名服务器时，如果客户端的请求报文中没有申请使用递归查询，即在DNS请求报文中的RD字段没有设置为1。
+* 以太网：以太网是一种计算机局域网技术。IEEE组织的IEEE 802.3标准制定了以太网的技术标准，它规定了包括物理层的连线、电子信号和介质访问层协议的内容。以太网是目前应用最普遍的局域网技术，取代了其他局域网技术如令牌环、FDDI 和 ARCNET。
+* WLAN 和 WIFI：无线局域网，简称 WLAN（Wireless Local Area Network）。是在几千米范围内的公司楼群或是商场内的计算机互相连接所组建的计算机网络，一个无线局域网能支持几台到几千台计算机的使用。无线局域网的一个标准称为 IEEE 802.11，俗称 WIFI。
 
-2. 客户端在DNS请求报文中申请使用递归查询，但所配置的本地域名服务器禁止使用递归查询，即在应答DNS报文头部的RA字段设置为0。
+**个域网**
 
-由于递归查询对于被查询的域名服务器负担太大，通常采用以下模式：**从请求主机到本地域名服务器的查询是递归查询，而其余的查询是迭代查询。**
+个人区域网 PAN（Personal Area Network），在个人工作的地方把属于个人使用的电子设备用无线技术连接起来的网络，也常称为无线个人区域网 WPAN(Wireless PAN)，其作用范围很小，大约在10m左右。
 
-### 高速缓存
+## 1.4 计算机网络性能指标
 
-为了提高DNS的查询效率，并减轻根域名服务器的负荷和减少因特网上的DNS查询报文数量，在域名服务器中广泛地使用了**高速缓存**。高速缓存用来存放最近查询过的域名以及从何处获得域名映射信息的记录。
+<!-- bps：bit per second； -->
 
-由于域名到IP地址的映射关系并不是永久不变，为保持高速缓存中的内容正确，域名服务器**应为每项内容设置计时器并删除超过合理时间的项**（例如，每个项目只存放两天)。
+性能指标可以从不同的方面来度量计算机网络的性能。常用的性能指标有8个：速率、带宽、吞吐量、时延、时延带宽积、往返时间、利用率、丢包率。
 
-不但在本地域名服务器中需要高速缓存，在用户主机中也很需要。许多用户主机在启动时从本地域名服务器下载域名和IP地址的全部数据库，维护存放自己最近使用的域名的高速缓存，并且只在从缓存中找不到域名时才向域名服务器查询。同理，主机也需要保持高速缓存中内容的正确性。
+**速率**
 
-如果**本地域名服务器**不久前已经有用户查询过域名为y.abc.com的IP地址，则本地域名服务器的高速缓存中应该存有该域名对应的IP地址。因此，直接把高速缓存中存放的上次查询结果(即y.abc.com的IP地址)告诉用户。
+速率就是计算机网络上的主机在数字信道上传送比特的速率，也称为比特率或数据率，单位是`bit/s`/`b/s`/`bps`。
 
-### DNS相关面试问题
-
-**DNS为什么用UDP？**
-
-更正确的答案是 DNS 既使用 TCP 又使用 UDP。当进行区域传送（主域名服务器向辅助域名服务器传送变化的那部分数据）时会使用 TCP，因为数据同步传送的数据量比一个请求和应答的数据量要多，而 TCP 允许的报文长度更长，因此为了保证数据的正确性，会使用基于可靠连接的 TCP。
-
-当客户端向 DNS 服务器查询域名 ( 域名解析) 的时候，一般返回的内容不会超过 UDP 报文的最大长度，即 512 字节。用 UDP 传输时，不需要经过 TCP 三次握手的过程，从而大大提高了响应速度，但这要求域名解析器和域名服务器都必须自己处理超时和重传从而保证可靠性。
-
-**递归查询和递归查询区别？**
-
-- **递归查询:** 如果主机所询问的本地域名服务器不知道被查询域名的 IP 地址，那么本地域名服务器就以 DNS 客户端的身份，向其他根域名服务器继续发出查询请求报文，即替主机继续查询，而不是让主机自己进行下一步查询。
-- **迭代查询：** 当根域名服务器收到本地域名服务器发出的迭代查询请求报文时，要么给出所要查询的IP 地址，要么告诉本地服务器下一步应该找哪个域名服务器进行查询，然后让本地服务器进行后续的查询。
-
-**讲讲DNS解析过程？**
-
-1. 浏览器搜索自己的 DNS 缓存。
-2. 若没有，则搜索操作系统中的 DNS 缓存和 hosts 文件。
-3. 若没有，则操作系统将域名发送至本地域名服务器，本地域名服务器查询自己的 DNS 缓存，查找成功则返回结果，否则依次向根域名服务器、顶级域名服务器、权限域名服务器发起查询请求，最终返回 IP 地址给本地域名服务器。
-4. 本地域名服务器将得到的 IP 址返回给操作系统，同时自己也将 IP 地址缓存起来。
-5. 操作系统将 IP 地址返回给浏览器，同时自己也将 IP 地址缓存起来。
-6. 浏览器得到域名对应的 IP 地址。
-
-## 6.3 浏览器输入URL返回页面过程
-
-1. 解析域名，找到主机 IP。
-2. 浏览器利用 IP 直接与网站主机通信，三次握手，建立 TCP 连接。浏览器会以一个随机端口向服务端的 web 程序 80 端口发起 TCP 的连接。
-3. 建立 TCP 连接后，浏览器向主机发起一个 HTTP 请求。
-4. 服务器响应请求，返回响应数据。
-5. 浏览器解析响应内容，进行渲染，呈现给用户。
-
-![图片](D:\Java\笔记\图片\1-11【网络编程】\10.png)
-
-## 6.4 Cookie 和 Session 的区别
-
-- **作用范围不同**，Cookie 保存在客户端，Session 保存在服务器端。
-- **有效期不同**，Cookie 可设置为长时间保持，比如我们经常使用的默认登录功能，Session 一般失效时间较短，客户端关闭或者 Session 超时都会失效。
-- **隐私策略不同**，Cookie 存储在客户端，容易被窃取；Session 存储在服务端，安全性相对 Cookie 要好一些。
-- **存储大小不同**， 单个 Cookie 保存的数据不能超过 4K；对于 Session 来说存储没有上限，但出于对服务器的性能考虑，Session 内不要存放过多的数据，并且需要设置 Session 删除机制。
-
-## 6.5 什么是对称加密和非对称加密
-
-**对称加密**：通信双方使用相同的密钥进行加密。特点是加密速度快，但是缺点是密钥泄露会导致密文数据被破解。常见的对称加密有`AES`和`DES`算法。
-
-**非对称加密**：它需要生成两个密钥，公钥和私钥。公钥是公开的，任何人都可以获得，而私钥是私人保管的。公钥负责加密，私钥负责解密；或者私钥负责加密，公钥负责解密。这种加密算法安全性更高，但是计算量相比对称加密大很多，加密和解密都很慢。常见的非对称算法有`RSA`和`DSA`。
-
-## 6.7 粘包
-
-TCP/IP协议簇建立了互联网中通信协议的概念模型，该协议簇中的两个主要协议就是 TCP 和 IP 协议。TCP/ IP 协议簇中的 TCP 协议能够保证数据段（Segment）的可靠性和顺序，有了可靠的传输层协议之后，应用层协议就可以直接使用 TCP 协议传输数据，不在需要关心数据段的丢失和重复问题。
-
-IP协议解决了数据包（Packet）的路由和传输，上层的 TCP 协议不再关注路由和寻址，那么 TCP 协议解决的是传输的可靠性和顺序问题，上层不需要关心数据能否传输到目标进程，只要写入 TCP 协议的缓冲区的数据，协议栈几乎都能保证数据的送达。
-
-当应用层协议使用 TCP 协议传输数据时，TCP 协议可能会将应用层发送的数据分成多个包依次发送，而数据的接收方收到的数据段可能有多个『应用层数据包』组成，所以当应用层从 TCP 缓冲区中读取数据时发现粘连的数据包时，需要对收到的数据进行拆分。
-
-### 什么是粘包
-
-粘包：多个数据包被连续存储于连续的缓存中，在对数据包进行读取时由于无法确定发生方的发送边界，而采用某一估测值大小来进行数据读出，若双方的size不一致时就会使指发送方发送的若干包数据到接收方接收时粘成一包，从接收缓冲区看，后一包数据的头紧接着前一包数据的尾。
-
-指 TCP 协议中，**发送方发送的若干数据到接收方接收时粘成一包,从接收缓冲区来看,后一包数据的头,紧接着前一包数据的尾.**
-
-### 出现原因
-
-出现粘包现象的原因是多方面的，它既可能由发送方造成，也可能由接收方造成。
-
-先说简单的接收方原因, 接收方引起的粘包是由于接收方用户进程不及时接收数据，从而导致粘包现象。这是因为接收方先把收到的数据放在系统接收缓冲区，用户进程从该缓冲区取数据，若下一包数据到达时前一包数据尚未被用户进程取走，则下一包数据放到系统接收缓冲区时就接到前一包数据之后，而用户进程根据预先设定的缓冲区大小从系统接收缓冲区取数据，这样就一次取到了多包数据。
-
-再说由发送导致的粘包, 这个比较有意思.
-
-粘包并不是 TCP 协议造成的，它的出现是因为应用层协议设计者对 TCP 协议的错误理解，忽略了 TCP 协议的定义并且缺乏设计应用层协议的经验。我们将从 TCP 协议以及应用层协议出发，分析我们经常提到的 TCP 协议中的粘包是如何发生的：
-
-- TCP 协议是面向字节流的协议，它可能会组合或者拆分应用层协议的数据；
-- 应用层协议的没有定义消息的边界导致数据的接收方无法拼接数据；
-
-TCP 协议是面向连接的、可靠的、基于字节流的传输层通信协议，应用层交给 TCP 协议的数据并不会以消息为单位向目的主机传输，这些数据在某些情况下会被组合成一个数据段发送给目标的主机。
-
-Nagle 算法是一种通过减少数据包的方式提高 TCP 传输性能的算法。因为网络带宽有限，它不会将小的数据块直接发送到目的主机，而是会在本地缓冲区中等待更多待发送的数据，这种批量发送数据的策略虽然会影响实时性和网络延迟，但是能够降低网络拥堵的可能性并减少额外开销。
-
-在早期的互联网中，Telnet 是被广泛使用的应用程序，然而使用 Telnet 会产生大量只有 1 字节负载的有效数据，每个数据包都会有 40 字节的额外开销，带宽的利用率只有 ~2.44%，Nagle 算法就是在当时的这种场景下设计的。
-
-当应用层协议通过 TCP 协议传输数据时，实际上待发送的数据先被写入了 TCP 协议的缓冲区，如果用户开启了 Nagle 算法，那么 TCP 协议可能不会立刻发送写入的数据，它会等待缓冲区中数据超过最大数据段（MSS）或者上一个数据段被 ACK 时才会发送缓冲区中的数据。
-![nagle-algorithm](D:\Java\笔记\图片\1-11【网络编程】\format.png)
-
-**图 2 - Nagle 算法**
-
-Nagle 算法确实能够在数据包较小时提高网络带宽的利用率并减少 TCP 和 IP 协议头带来的额外开销，但是使用该算法也可能会导致应用层协议多次写入的数据被合并或者拆分发送，当接收方从 TCP 协议栈中读取数据时会发现不相关的数据出现在了同一个数据段中，应用层协议可能没有办法对它们进行拆分和重组。
-
-除了 Nagle 算法之外，TCP 协议栈中还有另一个用于延迟发送数据的选项 `TCP_CORK`，如果我们开启该选项，那么当发送的数据小于 MSS 时，TCP 协议就会延迟 200ms 发送该数据或者等待缓冲区中的数据超过 MSS。
-
-无论是 `TCP_NODELAY` 还是 `TCP_CORK`，它们都会通过延迟发送数据来提高带宽的利用率，它们会对应用层协议写入的数据进行拆分和重组，而这些机制和配置能够出现的最重要原因是 — TCP 协议是基于字节流的协议，其本身没有数据包的概念，不会按照数据包发送数据。
-
-### 如何解决粘包
-
-如果我们系统性地学习过 TCP 协议以及基于 TCP 的应用层协议设计，那么设计一个能够被 TCP 协议栈任意拆分和组装数据包的应用层协议就不会有什么问题。既然 TCP 协议是基于字节流的，这其实就意味着应用层协议要自己划分消息的边界。
-
-如果我们能在应用层协议中定义消息的边界，那么无论 TCP 协议如何对应用层协议的数据包进程拆分和重组，接收方都能根据协议的规则恢复对应的消息。在应用层协议中，最常见的两种解决方案就是**基于长度或者基于终结符**（Delimiter）。
-
-![message-framing](D:\Java\笔记\图片\1-11【网络编程】\format2.png)
-
-**图 3 - 实现消息边界的方法**
-
-基于长度的实现有两种方式，一种是使用固定长度，所有的应用层消息都使用统一的大小，另一种方式是使用不固定长度，但是需要在应用层协议的协议头中增加表示负载长度的字段，这样接收方才可以从字节流中分离出不同的消息，HTTP 协议的消息边界就是 **基于长度+负载长度** 实现的：
-
-```xml
-HTTP/1.1 200 OK
-Content-Type: text/html; charset=UTF-8
-Content-Length: 138
-...
-Connection: close
- 
-<html>
-  <head>
-    <title>An Example Page</title>
-  </head>
-  <body>
-    <p>Hello World, this is a very simple HTML document.</p>
-  </body>
-</html>
+```apl
+kb/s = 10^3b/s
+Mb/s = K Kb/s = 10^6 b/s
+Gb/s = k Mb/s = 10^9 b/s
+Tb/s = k Gb/s = 10^12 b/s
 ```
 
-在上述 HTTP 消息中，我们使用 `Content-Length` 头表示 HTTP 消息的负载大小，当应用层协议解析到足够的字节数后，就能从中分离出完整的 HTTP 消息，无论发送方如何处理对应的数据包，我们都可以遵循这一规则完成 HTTP 消息的重组。
+比特/比特位/位是计算机中数据量的单位，也是信息论中信息量的单位，一个比特就是二进制数字中的一个1或0。一个字节就是8个比特位。
 
-虽然知道http-header中有`Content-Length,以为只是一个简单的标记左右,现在才知道是为了解决粘包问题.`
+```apl
+# 1个字节Byte = 8个比特位bit
+8 bit = 1 Byte
+KB = 2^10B
+MB = K KB = 2^20 B
+GB = K MB = 2^30 B
+TB = K GB = 2^40 B
+```
 
-不过 HTTP 协议除了使用基于长度的方式实现边界，也会使用基于终结符的策略，当 HTTP 使用块传输（Chunked Transfer）机制时，HTTP 头中就不再包含 `Content-Length` 了，它会使用负载大小为 0 的 HTTP 消息作为终结符表示消息的边界。
+**带宽**
 
-还有在使用post进行表单上传文件时, 会有一个boundary字符串(大概张这样, --ZnGpDtePMx0KrHh_G0X99Yef9r8JZsRJSXC), 这个也是作为文件的一个分隔符, 也可以说是基于终结符策略的.
+带宽是一个很重要的计算机网络性能指标。直接关系网络的应用体验。它在不同的系统中有着不同的含义：
 
-当然除了这两种方式之外，我们可以基于特定的规则实现消息的边界，例如：使用 TCP 协议发送 JSON 数据，接收方可以根据接收到的数据是否能够被解析成合法的 JSON 判断消息是否终结。
+* 模拟信号系统中意义：表示的是信号所包含的各种不同频率成分所占据的频率范围，也就是传输过程中最大频率与最小频率的范围。单位是Hz（kHz、MHz、GHz）。
+* 计算机网络中的意义：表示网络的通信线路所能传送数据的能力，因此网络带宽表示在单位时间内从网络中的某一点到另一个点所能通过的“最高数据率。单位与速率相同 b/s（kb/s, Mb/s, Gb/s, Tb/s）
 
-### 总结
+带宽的这两种表述之间有着密切的联系。一条通信线路的频带宽度越宽，那么其所传输数据的最高数据率也越高。
 
-TCP 协议粘包问题是因为应用层协议开发者的错误设计导致的，他们忽略了 TCP 协议数据传输的核心机制 — 基于字节流，其本身不包含消息、数据包等概念，所有数据的传输都是流式的，需要应用层协议自己设计消息的边界，即消息帧（Message Framing），我们重新回顾一下粘包问题出现的核心原因：
+**吞吐量**
 
-1. TCP 协议是基于字节流的传输层协议，其中不存在消息和数据包的概念；
-2. 应用层协议可以使用基于长度或者基于终结符的消息边界，解决多个消息的粘连；
+吞吐量表示在单位时间内通过某个网络（或信道、接口）的数据量。吞吐量被经常用于对现实世界中的网络的一种测量，以便知道实际上到底有多少数据量能够通过网络。吞吐量受网络的带宽或额定速率的限制。
 
-为什么会产生粘包和拆包呢？
+**时延**
 
-- 要发送的数据小于 TCP 发送缓冲区的大小，TCP 将多次写入缓冲区的数据一次发送出去，将会发生粘包；
-- 接收数据端的应用层没有及时读取接收缓冲区中的数据，将发生粘包；
-- 要发送的数据大于 TCP 发送缓冲区剩余空间大小，将会发生拆包；
-- 待发送数据大于 MSS（最大报文长度），TCP 在传输前将进行拆包。即 TCP 报文长度 - TCP 头部长度 > MSS。
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-5.png)
 
-解决方案：
+时延一般由三部分组成：发送时延 + 传播时延 + 处理时延（有时也把排队时延算进去）。
 
-- 发送端将每个数据包封装为固定长度
-- 在数据尾部增加特殊字符进行分割
-- 将数据分为两部分，一部分是头部，一部分是内容体；其中头部结构大小固定，且有一个字段声明内容体的大小。
+* 发送时延：源主机将分组发送出去产生的时延。发送时延 =  分组长度(b) ➗ 发送速率(b/s)。发送效率是一个短板效应，由速率最低的模块决定，所以在选择网线、路由器等设备时，要考虑到整体的速率平衡问题。发送速率 = min[网卡发送速率，信道带宽，交换机或路由器的接口速率]。
+* 传播时延：分组在线路中传播产生的时延。传播时延 = 信道长度(m) ➗ 电磁波传播速率(m/s)。
+* 处理时延：路由器收到分组后对其进行存储转发产生的时延。因为这个收到影响的因素太多，不方便计算，因此一般忽略。
 
-## 6.8 KeepAlive
+**时延带宽积**
 
-首先，我们要明确我们谈的是**TCP**的 **`KeepAlive`** 还是**HTTP**的 **`Keep-Alive`**。TCP的KeepAlive和HTTP的Keep-Alive**是完全不同的概念，不能混为一谈**。
+时延带宽积就是一个比特到达终点的单位时间内传输的比特个数。若发送端连续发送数据，则在所发送的第一个比特即将到达终点时，发送端就已经发送了时延带宽积个比特。链路的时延带宽积又称为以比特为单位的链路长度。
 
-实际上HTTP的KeepAlive写法是`Keep-Alive`，跟TCP的`KeepAlive`写法上也有不同。
+时延带宽积 = 传播时延 ✖ 带宽。
 
-- TCP的**keepalive**是侧重在保持客户端和服务端的连接，一方会不定期发送心跳包给另一方，当一方端掉的时候，没有断掉的定时发送几次**心跳包**，如果间隔发送几次，对方都返回的是RST，而不是ACK，那么就释放当前链接。
+**往返时间**
 
-  设想一下，如果tcp层没有keepalive的机制，一旦一方断开连接却没有发送FIN给另外一方的话，那么另外一方会一直以为这个连接还是存活的，几天，几月。那么这对服务器资源的影响是很大的。
+往返时间RTT（Round Trip Time）是一个网络请求双向交互一次所需的时间。
 
-- HTTP的**keep-alive**一般我们都会带上中间的**横杠**，普通的http连接是客户端连接上服务端，然后结束请求后，由客户端或者服务端进行http连接的关闭。下次再发送请求的时候，客户端再发起一个连接，传送数据，关闭连接。这么个流程反复。
+**利用率**
 
-  但是一旦客户端发送`connection:keep-alive`头给服务端，且服务端也接受这个keep-alive的话，两边对上暗号，这个连接就可以复用了，一个http处理完之后，另外一个http数据直接从这个连接走了。减少新建和断开TCP连接的消耗。
+利用率由两个概念，分别是信道利用率和网络利用率：
 
-二者的作用简单来说：
+* 信道利用率：用来表示某信道有百分之几的时间是被利用的（有数据通过）。
+* 网络利用率：是全网络的信道利用率的加权平均。
 
-> HTTP协议的Keep-Alive意图在于短时间内连接复用，希望可以短时间内在同一个连接上进行多次请求/响应。
->
-> TCP的KeepAlive机制意图在于保活、心跳，检测连接错误。当一个TCP连接两端长时间没有数据传输时(通常默认配置是2小时)，发送keepalive探针，探测链接是否存活。
+根据排队论，当某信道的利用率增大时，该信道引起的时延也会迅速增加。因此，信道利用率并非越高越好。也不能使信道利用率太低，这会使宝贵的通信资源被白白浪费，应该使用一些机制，可以根据情况动态调整输入到网络中的通信量，使网络利用率保持在一个合理的范围内。
 
-**总之，记住HTTP的Keep-Alive和TCP的KeepAlive不是一回事。**
+**丢包率**
 
-**tcp的keepalive是在ESTABLISH状态的时候，双方如何检测连接的可用行。**
+丢包率即分组丢失率，是指在一定的时间范围内，传输过程中丢失的分组数量与总分组数量的比率。丢包率具体可分为接口丢包率、结点丢包率、链路丢包率、路径丢包率、网络丢包率等。
 
-**而http的keep-alive说的是如何避免进行重复的TCP三次握手和四次挥手的环节。**
+分组丢失率/丢包率主要有两种情况：
 
-### TCP的KeepAlive
+* 分组在传输过程中出现误码，被结点丢弃。
+* 分组到达一台队列已满的分组交换机时被丢弃，在通信量较大时就可能造成网络拥塞。
 
-**为什么要有KeepAlive**
+因此丢包率反映了网络的拥塞情况：无拥塞时丢包率为0、轻度拥塞时丢包率为1％—4％、严重拥塞时丢包率为5％-15％。
 
-在谈KeepAlive之前，我们先来了解下简单TCP知识。首先要明确的是在TCP层是没有“请求”一说的，经常听到在TCP层发送一个请求，这种说法是错误的。
+## 1.5 计算机网络体系结构
 
-TCP是一种通信的方式，“请求”一词是事务上的概念，HTTP协议是一种事务协议，如果说发送一个HTTP请求，这种说法就没有问题。也经常听到面试官反馈有些面试运维的同学，基本的TCP三次握手的概念不清楚，面试官问TCP是如何建立链接，面试者上来就说，假如我是客户端我发送一个请求给服务端，服务端发送一个请求给我。。。
+计算机网络体系可以大致分为一下三种：开放式系统互联OSI（Open System Interconnect）七层模型、TCP/IP四层模型和五层模型。
 
-这种一听就知道对TCP基本概念不清楚。下面是通过wireshark抓取的一个TCP建立握手的过程。（命令行基本上用TCPdump,后面我们还会用这张图说明问题）:
+- OSI 七层模型：大而全，但是比较复杂、而且是先有了理论模型，没有实际应用。它是法律上的国际标准。
+- TCP/IP四层模型：是由实际应用发展总结出来的，从实质上讲，TCP/IP只有最上面三层，最下面一层没有什么具体内容，目的是为了允许任何形式的网络接口使用TCP/IP协议。它是实际上的国际标准。
+- 五层模型：五层模型只出现在计算机网络教学过程中，这是对七层模型和四层模型的一个折中，既简洁又能将概念阐述清楚。
 
-![](D:\Java\笔记\图片\1-11【网络编程】\13.jpg)
+![](D:\Java\笔记\图片\6-03【计算机网络-网络模型】\1-1.png)
 
-现在只要看前3行，这就是TCP三次握手的完整建立过程，第一个报文SYN从发起方发出，第二个报文SYN,ACK是从被连接方发出，第三个报文ACK确认对方的SYN，ACK已经收到，如下图：
+### 1.5.1 OSI 网络七层模型
 
-![](D:\Java\笔记\图片\1-11【网络编程】\14.webp)
+OSI网络七层模型是ISO组织定义的国际通用标准模型，其目的是为了制定全球统一的网络模型标准，让全球内的国家、组织可以实现网络互通。OSI网络七层模型分别为：**应用--表示--会话--传输--网络--数据链路--物理**
 
-但是数据实际上并没有传输，请求是有数据的，第四个报文才是数据传输开始的过程，wireshark把第四个报文解析成HTTP协议，HTTP协议的GET方法和URI也解析出来，所以说TCP层是没有请求的概念，HTTP协议是事务性协议才有请求的概念，TCP报文承载HTTP协议的请求(Request)和响应(Response)。
+* **应用层**：给用户和抽象的网络之间提供一个接口，为应用程序提供交互服务。常见协议有：TELENT、HTTP、HTTPS、FTP、DNS、POP3、SMTP等。
+* **表示层**：表示层提供各种数据的编码和转换功能，确保一个系统的应用层发送的数据能被另一个系统的应用层识别。例如：数据格式变化、数据加密与解密、数据压缩与解压等。常见协议有：Rlogin、SNMP、Gopher。
+* **会话层**：会话层就是负责建立、管理和终止两个节点（应用程序）之间的通信会话。负责维护两个节点之间的传输联接，确保点到点传输不中断，以及管理数据交换等功能。
+* **传输层**：传输层实现了网络中不同主机上的用户进程之间的数据通信，为用户提供了端到端的服务。定义了传输数据的协议端口号，以及流量控制和差错校验。常见协议有：TCP、UDP。
+* **网络层**：为主机提供数据传输服务。而传输层协议是为主机中的进程提供数据传输服务。网络层把传输层传递下来的报文段或者用户数据报封装成分组。IP协议是Internet的基础。常见协议有：IP、ICMP、ARP、RARP、AKP、UUCP。
+* **数据链路层**：网络层针对的还是主机之间的数据传输服务，而主机之间可以有很多链路，链路层协议就是为同一链路的主机提供数据传输服务。数据链路层把网络层传下来的分组封装成帧。
+* **物理层**：物理层的作用就是提供了网络的双向通讯，为双向传输提供了有保障的通路。考虑的是怎样在传输媒体上传输数据比特流，而不是指具体的传输媒体。物理层的作用是尽可能屏蔽传输媒体和通信手段的差异，使数据链路层感觉不到这些差异。
 
-现在才是开始说明为什么要有KeepAlive。链接建立之后，如果应用程序或者上层协议一直不发送数据，或者隔很长时间才发送一次数据，当链接很久没有数据报文传输时如何去确定对方还在线，到底是掉线了还是确实没有数据传输，链接还需不需要保持，这种情况在TCP协议设计中是需要考虑到的。
+就像一个公司要分很多部门一样，每个部门各司其职，网络模型分层的目的也是为了这样，另外分层还能达到降低复杂性、统一标准、工程模块化、快速发展、易于学习掌握等目的。
 
-TCP协议通过一种巧妙的方式去解决这个问题，当超过一段时间之后，TCP自动发送一个数据为空的报文给对方，如果对方回应了这个报文，说明对方还在线，链接可以继续保持，如果对方没有报文返回，并且重试了多次之后则认为链接丢失，没有必要保持链接。
+公司的部门和部门之间肯定是有一定联系的。所以在OSI七层模型中，相邻层之间也都是有联系的，这个联系就叫做服务接入点，简称SA(service access)。所以正是因为相邻两层之间有SA，这两层之间才会有联系。相邻两层之间必须有服务接入点。
 
-**怎么开启KeepAlive？**
+### 1.5.2 TCP/IP 四层模型
 
-KeepAlive并不是默认开启的，在Linux系统上没有一个全局的选项去开启TCP的KeepAlive。需要开启KeepAlive的应用必须在TCP的socket中单独开启。Linux Kernel有三个选项影响到KeepAlive的行为：
+**TCP/IP**（`Transmission Control Protocol/Internet Protocol`，传输控制协议/网际协议）指能够在多个不同网络间实现信息传输的协议簇。该协议具有很强的灵活性，支持任意规模的网络，几乎可连接所有服务器和工作站。定义了主机如何连入因特网及数据如何在它们之间传输的标准。
 
-> - tcp_keepalive_time 7200// 距离上次传送数据多少时间未收到新报文判断为开始检测，单位秒，默认7200s
-> - tcp_keepalive_intvl 75// 检测开始每多少时间发送心跳包，单位秒，默认75s
-> - tcp_keepalive_probes 9// 发送几次心跳包对方未响应则close连接，默认9次
+TCP/IP 协议不仅仅指的是TCP 和IP两个协议，而是指一个由 TCP、IP、UDP、FTP、SMTP 等协议构成的协议簇， 只是因为在TCP/IP协议中TCP协议和IP协议最具代表性，所以被称为 TCP/IP 协议。
 
-TCP socket也有三个选项和内核对应，通过setsockopt系统调用针对单独的socket进行设置：
+TCP/IP 协议在一定程度上参考了OSI的体系结构。不同于ISO模型的七个分层，TCP/IP 协议参考模型把所有的TCP/IP系列协议归类到四个抽象层中：**应用--传输--网络--网络接口层**。数据链路层和物理层合并为网络接口层。网络层也称为IP层。
 
-> - TCPKEEPCNT: 覆盖 tcpkeepaliveprobes
-> - TCPKEEPIDLE: 覆盖 tcpkeepalivetime
-> - TCPKEEPINTVL: 覆盖 tcpkeepalive_intvl
+TCP/IP 体系结构不严格遵循 OSI 分层概念，应用层可能会直接使用 IP 层或者网络接口层。
 
-举个例子，以我的系统默认设置为例，kernel默认设置的tcpkeepalivetime是7200s, 如果我在应用程序中针对socket开启了KeepAlive,然后设置的TCP_KEEPIDLE为60，那么TCP协议栈在发现TCP链接空闲了60s没有数据传输的时候就会发送第一个探测报文。
+![](D:\Java\笔记\图片\6-03【计算机网络-网络模型】\1-2.png)
 
-**KeepAlive的不足和局限性**
+### 1.5.3 五层原理体系结构
 
-其实，tcp自带的keepalive还是有些不足之处的。
+五层模型：五层模型只出现在计算机网络教学过程中，这是对七层模型和四层模型的一个折中，既简洁又能将概念阐述清楚。
 
-keepalive只能检测连接是否存活，不能检测连接是否可用。例如，某一方发生了死锁，无法在连接上进行任何读写操作，但是操作系统仍然可以响应网络层keepalive包。
+五层为：应用层 -- 传输层 / 运输层 -- 网络层 / 网际层 / IP层 -- 数据链路层 -- 物理层
 
-TCP keepalive 机制依赖于操作系统的实现,灵活性不够，默认关闭，且默认的 keepalive 心跳时间是 两个小时, 时间较长。代理(如socks proxy)、或者负载均衡器，会让tcp KeepAlive失效
+接下来主要阐述五层原理体系结构！
 
-### HTTP的Keep-Alive
+### 1.5.3 常用的专业术语
 
-通常一个网页可能会有很多组成部分，除了文本内容，还会有诸如：js、css、图片等静态资源，有时还会异步发起AJAX请求。只有所有的资源都加载完毕后，我们看到网页完整的内容。然而，一个网页中，可能引入了几十个js、css文件，上百张图片，如果每请求一个资源，就创建一个连接，然后关闭，代价实在太大了。
+一共可以分为三大类：实体、协议、服务。
 
-基于此背景，我们希望连接能够在短时间内得到复用，在加载同一个网页中的内容时，尽量的复用连接，这就是HTTP协议中keep-alive属性的作用。
+**实体**
 
-> - HTTP的Keep-Alive是**HTTP1.1**中**默认开启**的功能。通过headers设置"`Connection: close` "关闭
-> - 在HTTP1.0中是**默认关闭**的。通过headers设置"`Connection: Keep-Alive`"开启。
+- 实体：任何可发送或接收信息的硬件或者软件进程。
+- 对等实体：收发相同层次中的实体
 
-对于客户端来说，不论是浏览器，还是手机App，或者我们直接在Java代码中使用`HttpUrlConnection`，只是负责在请求头中设置Keep-Alive。Keep-Alive属性保持连接的**时间长短是由服务端决定的**，通常配置都是在**几十秒左右。**
+**协议**
 
-开启HTTP Keep-Alive之后，能复用已有的TCP链接，当前一个请求已经响应完毕，服务器端没有立即关闭TCP链接，而是等待一段时间接收浏览器端可能发送过来的第二个请求，通常浏览器在第一个请求返回之后会立即发送第二个请求，如果某一时刻只能有一个链接，同一个TCP链接处理的请求越多，开启KeepAlive能节省的TCP建立和关闭的消耗就越多。
+* 协议：控制两个对等实体进行逻辑通信的规则的集合。
+* 协议有着三要素：语法、语义、同步。
+  * 语法：定义所交换信息的格式。例如 TCP 数据报文格式、IP 数据报格式等
+  * 语义：定义收发双方要完成的操作。例如 TCP 请求与相应
+  * 同步：定义收发双方的时序关系。例如 TCP 三次握手、TCP 四次挥手
 
-当然通常会启用多个链接去从服务器器上请求资源，但是开启了Keep-Alive之后，仍然能加快资源的加载速度。HTTP/1.1之后默认开启Keep-Alive, 在HTTP的头域中增加Connection选项。当设置为`Connection:keep-alive`表示开启，设置为`Connection:close`表示关闭。
+**服务**
+
+在协议的控制下，两个对等实体间的逻辑通信使得本层能够向上一层提供服务。要实现本层协议，还需要使用下面一层所提供的服务。
+
+服务访问点：在同一个系统中相邻两层的实体交换信息的逻辑接口，用于区分不同的服务类型。
+
+* 数据链路层的服务访问点为帧的类型字段。
+* 网络层的服务访问点为 IP 数据报首部中的协议字段。
+* 数据层的服务访问点为端口号。
+
+服务原语：上层使用下层所提供的服务必须通过与下层交换一些命令，这些命令称位服务原语。
+
+PDU、SDU：
+
+- 协议数据单元 PDU（Protocol Data Unit）：对等实体之间传送的数据包称为该层的协议数据单元。
+- 服务数据单元 SDU（Service Data Unit）：同一系统内，层与层之间交换的数据包称为服务数据单元。
+- 多个 SDU 可以合并成为一个 PDU、一个 SDU 也可以划分为几个 PDU。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\1-6.png)
+
+# 第二章 物理层
+
+物理层考虑的是怎样才能在连接各种计算机的传输媒体上传输数据比特流。物理层为数据链路层屏蔽了各种传输媒体的差异，使数据链路层只需要考虑如何完成本层的协议和服务，而不必考虑网络具体的传输媒体是什么。
+
+物理层协议主要有四个任务：机械特性、电气特性、功能特性、过程特性。
+
+* 机械特性：指明接口所用接线器的形状和尺寸、引脚数目和排列、固定和锁定装置。
+* 电气特性：指明在接口电缆的各条线上出现的电压的范围。
+* 功能特性：指明某条线上出现的某一点评的电压表示何种意义。
+* 过程特性：指明对于不同功能的各种可能事件的出现顺序。
+
+## 2.1 传输媒体
+
+传输媒体主要有着两大类：导引型传输媒体、非导引型传输媒体。
+
+* 导引型传输媒体有着：同轴电缆、双绞线、光纤、电力线。
+* 非导引型传输媒体有：无线电波、微波、红外线、可见光。
+
+## 2.2 传输方式
+
+根据不同的划分传输方式分为：串行传输和并行传输；同步传输和异步传输；单向通信（单工）、双向交替通信（半双工）、双向同时通信（全双工）；
+
+**串行传输和并行传输**
+
+* 串行传输：数据通过一条线路传输，一个一个比特依次传送，因此只需要一条线路。
+* 并行传输：数据通过多条线路传输。
+
+数据在进行远距离传输的时候用的是串行传输，不是并行传输。并行传输的优点是速度为串行传输的n倍，缺点是成本高，计算机内部数据的传输一般使用并行传输。
+
+**同步传输和异步传输**
+
+同步传输：数据以稳定的比特流形式传输，字节之间没有间隔。
+
+接收端在每个比特信号的中间时刻进行检测，以判别接收到的是比特0还是比特1。由于不同设备的时钟周期存在差异，不能做到完全相同，在传输大量数据的过程中判别时刻的累计误差会导致接收端对比特信号的判别位置错位。因此需要采取方法使收发双方的始终保持同步。
+
+* 外同步：在收发双方之间添加一条单独的时钟信号线。发送端在发送数据信号的同时，另外发送一条时钟信号，接收端按照同步信号的节奏来接受数据。
+* 内同步：发送端将时钟同步信号编码到发送数据中一起传输，例如曼彻斯特编码。传统以太网采用的就是曼彻斯特编码的内同步方式。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\2-1.png)
+
+异步传输：以字节为独立的传输单位，字节之间的间隔时间不固定的。异步指的是字节之间异步，字节之间的时间间隔不固定。但是，字节中的每个比特依旧要同步，各个比特的持续时间要相同。
+
+接收端仅在每个字节的起始处对子节内的比特实现同步。为此，通常要在每个子节的前后分别加上起始位和结束位。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\2-2.png)
+
+**单工、半双工和全双工**
+
+* 单工通信：通信双方只有一个数据传输方向，例如无线电、广播。
+* 半双工通信：需要两条信道，双方有两个数据传输方向，但是不可以同时通信。例如对讲机。
+* 全双工通信：需要两条信道，通信双方有两个数据传输方向，可以进行同时通信。例如实时电话
+
+## 2.3 编码与调制
+
+在计算机网络中，计算机需要处理和传输文字、图片、音频和视频，这些我们统称为消息。数据是运输消息的实体，计算机所能够识别的数据便是二进制数据了。计算机中的网卡将二进制数据比特 0 和比特 1 变换成相应的电信号发送到网线，也就是说信号是数据的电磁表现。
+
+由信源发出的原始电信号成为基带信号，基带信号可分为数字基带信号和模拟基带信号：
+
+- 数字基带信号：例如计算机和 CPU 与内存之间传输的信号。
+- 模拟基带信号：例如麦克风收到声音后产生的音频信号。
+
+信号需要在信道中传输，信道有数字信道和模拟信道。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\2-3.png)
+
+**编码**
+
+编码就是在不改变信号性质的情况下仅对数字基带信号的波形进行变换。编码后产生的信号仍为数字信号。可以在数字信道中传输。
+
+* 数字基带信号转换为另一种数字信号在数字信道中传输。例如以太网使用曼彻斯特编码、4B/5B、8B/10B编码
+* 模拟基带信号转换为数字信号 ，在数字信道中传输。例如，对音频信号进行编码的脉码调制PCM。
+
+**调制**
+
+把数据基带信号的频率范围，搬移到较高的频段，并转换为模拟信号，称为调制。调制后产生模拟信号，在模拟信道种传输。
+
+* 数字信号转换为模拟信号，在模拟信道中传输。例如WiFi采用补码键控CCK、直接序列扩频DSSS、正交频分复用 OFDM 等调制方式。
+* 模拟信号转换为另一种模拟信号，在模拟信道中传输。例如，语音数据加载到模拟的载波信号中传输。频分复用FDM技术，充分利用带宽资源。
+
+**码元**
+
+码元：在使用时间域的波形表示数字信号的时候，代表不同离散数值的基本波形。简单来说码元就是构成信号的一段波形。
+
+**常用编码**
+
+* 不归零编码NRZ（Not Return Zero）：在整个码元时间内，不会出现零电平。
+
+  ![](D:\Java\笔记\图片\6-03【计算机网络】\2-4.png)
+
+  为了辨别码元个数，在发送信号时需要发送方和接收方做到严格的同步。一般需要额外一根传输线来传输时钟信号，实现同步的目的。接收方按照时钟信号的节拍来逐个接收码元。但是额外一根线资源造成浪费，在计算机网络中的数据传输一般不采用这类编码。
+
+* 归零编码RZ（Return Zero）：每个码元传输结束后都要”归零“。接收方只要在信号归零后进行采样，而不需要单独的时钟信号。
+
+  ![](D:\Java\笔记\图片\6-03【计算机网络】\2-5.png)
+
+  归零编码相当于把时钟信号用”归零“的方式放在了数据之内，看作一种自同步的信号。但是在传输过程中，大部分的数据带宽都用来传输零电平数据，造成资源浪费。编码效率低。
+
+* 曼彻斯特编码：在码元中间时刻会产生跳变，跳变的含义可以自己定义。例如由低电平到高电平代表1/0信号，由高电平到滴电平代表0/1信号。
+
+  ![](D:\Java\笔记\图片\6-03【计算机网络】\2-6.png)
+
+  码元中间时刻的跳变既代表时钟，又代表数据。传统以太网使用的就是曼彻斯特编码 10Mb/s。
+
+* 差分曼彻斯特编码：在差分曼彻斯特编码中间也有跳变，但是此跳变只代表时钟信号。比曼彻斯特编码变化少，更适合较高的传输速率。
+
+  ![](D:\Java\笔记\图片\6-03【计算机网络】\2-7.png)
+
+  具体的数据由码元开始处电平是否变化来表示。例如在码元结束和码元开始的时候电平做对比，有变化代表0/1，无变化代表1/0。
+
+**基本调制方法**
+
+- 调幅：对基带信号的波幅进行调整，例如将1信号波幅进行改变，在接收方读取时有载波输出为1。
+
+- 调频：对基带信号频率进行调整，例如将 0 信号调制为频率 f1，1 信号调制为频率 f2。
+
+- 调相：对基带信号相位进行调制，例如将 0 信号的初相位调整为 0 度，1 信号的初相位调整为 180 度。
+
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\2-8.png)
+
+但是在以上基本调制方法中，1个码元只能包含1个比特信息。对此，我们可以是使用混合调制的方式。
+
+因为频率和相位是相关的，即频率是相位随事件的变化率。所以一次只能调制频率和相位两个中的一个。通常情况下，相位和振幅可以结合起来一起调制，成为正交调幅调制QAM。
+
+QAM-16：在 QAM-16 中有 12 种相位，每种相位有 1 或 2 种振幅可选择。由于此调制方法可以调制出 16 种码元，要完整的表示这 16 种情况，码元内是二进制数据，因此至少需要 4 个二进制数，也就是 4 个比特数据，因此在 QAM-16 调制方法中，每个码元可以表示 4 个比特数据。
+
+## 2.4 信道极限容量
+
+在实际传输过程中由于通信质量的问题会导致传输信号被干扰，导致信号波形出现了码元之间的清晰界限，这种现象叫码元串扰。
+
+产生失真的因素主要有码元传输速率（与调制方法有关）、信号传输距离、噪声干扰、传输媒体质量等。因为以上情况，防止信道数据过大导致码间串扰，因此做出了信号极限容量的预测。其中最著名的就是奈氏准则和香农公式。
+
+**奈氏准则**
+
+奈氏准则：在假定的理想条件下，为了避免码间串扰，码元传输速率时有上限的。W 代表了信道带宽，单位为Hz。Baud是单位，是波特，也是码元 / 秒。
+
+* 理想低通信道的最高码元传输速率 = 2 W Baud = 2 W 码元 / 秒
+* 理想带通信道的最高码元传输速率 = W Baud = W 码元 / 秒
+
+如果没有指定是带通信道，也就是给出信道频率地上下限，那么默认是指低通信道。
+
+码元传输速率又称为波特率、调制速率、波形速率或者符号速率，它与比特率有一定的关系。要提高信息传输速率（比特率），就必须设法使每一个码元能够携带更多个比特的信息量，这需要采用多元制。
+$$
+设不同基本波形（码元）地数量为X = 相位数量 \times 每个相位振幅，则每个码元可携带地比特数量为log_2X;\\
+数据传输速率（bit / s） = 码元传输速率 / 波特率（码元 / 秒） \times 每个码元可携带地比特数量（比特 / 码元）\\
+= 码元传输速率 / 波特率（码元 / 秒） \times log_2X（比特 / 码元）
+$$
+当一个码元只携带 1 比特的信息量的时候，波特率（码元 / 秒）与比特率（比特 / 秒）在数值上面是相等的。携带 n  比特的信息量时，则波特率转换成比特率的时候，数值要乘以 n。
+
+实际信道所能传输的最高码元速率，要明显低于奈氏准则给出的上限数值。奈氏准则是在理想条件下推导出来的，并没有考虑其他因素，例如传输距离、噪声干扰、传输媒体质量等。
+
+**香农公式**
+
+香农公式：带宽受限且有高斯白噪声干扰的信道的极限信息传输速率。
+$$
+c = W \times \log_2(1 + \frac{S}{N})
+$$
+
+* c：信道的极限信息传输速率。单位：b / s
+* W：信道带宽 / 频率带宽。单位：Hz
+* S：信道内所传信号的平均功率。
+* N：信道内的高斯噪声功率。
+* S / N：信噪比，使用分贝（dB）作为度量单位。信噪比（dB）= 10 ✖ log_10(S / N) (dB)
+
+从香农公式可以看出来信道带宽或者信道中信噪比越大，信道的极限传输速率越高。但是在实际信道上能够达到的信息传输速率低不少，这是因为在实际信道中，信号还要受到其他的一些损伤，如各种脉冲干扰、信号在传输中的衰减和失真等，这些因素在香农公式并未考虑。
+
+**总结**
+
+在信道带宽一定的情况下，根据奈氏准则和香农公式，想要提高信息的传输速率就必须采用多元制（更好的调制方法）和努力提高信道中的信噪比。
+
+自从香农公式发表之后，各种新的信号处理和调制方法不断出现，其目的都是为了尽可能地接近香农公式给出的传输速率极限。
+
+# 第三章 数据链路层
+
+数据链路层的功能：实现数据在一个网络之间的传输。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\3-1.png)
+
+- 链路（Link）就是从一个节点到相邻节点地一段物理线路，而中间没有任何其他地交换节点。
+- 数据链路（Data Link）是指把实现通信协议地硬件和软件加到链路上面，就构成了数据链路。
+- 数据链路以帧（Frame）为单位传输和处理数据。
+
+**封装成帧**
+
+封装成帧是把网络层交付的协议数据单元，添加帧头和帧尾的操作，称为封装成帧，主要目的是为了在链路上以帧为单元传输数据，从而实现数据链路层本身的功能。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\3-2MAC Frame.png)
+
+**差错检测**
+
+在传输过程中可能会产生比特差错：1 可能会变成 0， 而 0 也可能变成 1。为此添加了检错码概念：
+
+- 发送方会基于发送的数据和检错算法计算出检错码，并放在帧尾。
+- 接收方主机根据数据链路层放在帧尾的检错码和检错算法来判断传输过程是否有错误。
+
+![](D:\Java\笔记\图片\6-03【计算机网络】\3-3Error Checking Code.png)
+
+**可靠传输**
+
+接收方主机收到有误码的帧后，是不会接受该帧的，会将它丢弃。丢弃有误码的帧后，会进行其他措施来确保接收方主机还可以重新收到被丢弃的这个帧的正确副本，来实现发送方发送什么，接收方就能接收到什么。
+
+尽管误码是不能够避免地，但若是能够实现发送方发送什么，接收方就能够收到什么，就成为可靠传输。
+
+## 3.1 封装成帧
+
