--- a/3-JavaWeb/3-17【会话技术、JWT】.md
+++ b/3-JavaWeb/3-17【会话技术、JWT】.md
@@ -533,6 +533,9 @@ TRUNCATE TABLE tb_user;
 INSERT  INTO `tb_user`(`id`, `name`, `password`) VALUES 
 	(1, '林炫', '123456'), 
 	(2, '陈沐阳', '123456');
+	
+-- 开启外键约束
+SET FOREIGN_KEY_CHECKS=1
 ```
 
 ```java
