--- a/7-扩展/7-00【通用基础知识】.md
+++ b/7-扩展/7-00【通用基础知识】.md
@@ -463,15 +463,15 @@ x{m,n} 表示至少m次，但是不超过n次
 
 | 字符          | 说明                                                         |
 | ------------- | ------------------------------------------------------------ |
-| \             | 将下一字符标记为特殊字符、文本、反向引用或八进制转义符。"n"匹配字符"n"。"\n"匹配换行符。序列"\\\\"匹配"\"，"\\("匹配"("。 |
-| ^             | 匹配输入字符串开始的位置。如果设置了 **RegExp** 对象的 **Multiline** 属性，^ 还会与"\n"或"\r"之后的位置匹配。 |
-| $             | 匹配输入字符串结尾的位置。如果设置了 **RegExp** 对象的 **Multiline** 属性，$ 还会与"\n"或"\r"之前的位置匹配。 |
-| *             | 零次或多次匹配前面的字符或子表达式。例如，zo* 匹配"z"和"zoo"。* 等效于 {0,}。 |
-| +             | 一次或多次匹配前面的字符或子表达式。例如，"zo+"与"zo"和"zoo"匹配，但与"z"不匹配。+ 等效于 {1,}。 |
-| ?             | 零次或一次匹配前面的字符或子表达式。例如，"do(es)?"匹配"do"或"does"中的"do"。? 等效于 {0,1}。 |
-| {*n*}         | *n* 是非负整数。正好匹配 *n* 次。例如，"o{2}"与"Bob"中的"o"不匹配，但与"food"中的两个"o"匹配。 |
-| {*n*,}        | *n* 是非负整数。至少匹配 *n* 次。例如，"o{2,}"不匹配"Bob"中的"o"，而匹配"foooood"中的所有 o。"o{1,}"等效于"o+"。"o{0,}"等效于"o*"。 |
-| {*n*,*m*}     | *M* 和 *n* 是非负整数，其中 *n* <= *m*。匹配至少 *n* 次，至多 *m* 次。例如，"o{1,3}"匹配"fooooood"中的头三个 o。'o{0,1}' 等效于 'o?'。注意：您不能将空格插入逗号和数字之间。 |
+| \             | 将下一字符标记为特殊字符、文本、反向引用或八进制转义符。     |
+| ^             | 匹配输入字符串开始的位置。                                   |
+| $             | 匹配输入字符串结尾的位置。                                   |
+| *             | 零次或多次匹配前面的字符或子表达式。                         |
+| +             | 一次或多次匹配前面的字符或子表达式。                         |
+| ?             | 零次或一次匹配前面的字符或子表达式。                         |
+| { n }         | n 是非负整数。正好匹配 n 次。                                |
+| { n , }       | n 是非负整数。至少匹配 n 次。                                |
+| { n,m }       | n 和 m 是非负整数，其中 n <= m。匹配至少 n 次，至多 m 次。不能将空格插入逗号和数字之间。 |
 | ?             | 当此字符紧随任何其他限定符（*、+、?、{*n*}、{*n*,}、{*n*,*m*}）之后时，匹配模式是"非贪心的"。"非贪心的"模式匹配搜索到的、尽可能短的字符串，而默认的"贪心的"模式匹配搜索到的、尽可能长的字符串。例如，在字符串"oooo"中，"o+?"只匹配单个"o"，而"o+"匹配所有"o"。 |
 | .             | 匹配除"\r\n"之外的任何单个字符。若要匹配包括"\r\n"在内的任意字符，请使用诸如"[\s\S]"之类的模式。 |
 | (*pattern*)   | 匹配 *pattern* 并捕获该匹配的子表达式。可以使用 **$0…$9** 属性从结果"匹配"集合中检索捕获的匹配。若要匹配括号字符 ( )，请使用"\("或者"\)"。 |
@@ -925,3 +925,4 @@ public static void main(String[] args) {
 ### 简历编写
 
 [^A-Za-z0-9_]: 
+[^ \f\n\r\t\v]: 
