--- a/1-Java基础/1-01【常用API】.md
+++ b/1-Java基础/1-01【常用API】.md
@@ -63,7 +63,100 @@ public class MyClass /*extends Object*/ {
 }
 ```
 
-根据JDK源代码及Object类的API文档，Object类当中包含的方法有11个。我们看一下下面两个：toString方法和equals方法。
+根据JDK源代码及Object类的API文档，Object类当中包含的方法有11个：toString、getClass、hashCode、equals、clone、wait(三个)、notify、notifyAll、finalize
+
+* toString
+
+  ```java
+  public String toString() {
+      return getClass().getName() + "@" + Integer.toHexString(hashCode());
+  }
+  ```
+
+* getClass
+
+  ```java
+  @IntrinsicCandidate
+  public final native Class<?> getClass();
+  ```
+
+* hashcode
+
+  ```java
+  @IntrinsicCandidate
+  public native int hashCode();
+  ```
+
+* equals
+
+  ```java
+  public boolean equals(Object obj) {
+      return (this == obj);
+  }
+  ```
+
+* clone
+
+  ```java
+  @IntrinsicCandidate
+  protected native Object clone() throws CloneNotSupportedException;
+  ```
+
+* finalize
+
+  ```java
+  @Deprecated(since="9")
+  protected void finalize() throws Throwable { }
+  ```
+
+* wait
+
+  ```java
+  public final void wait() throws InterruptedException {
+      wait(0L);
+  }
+  ```
+
+* wait(long timeout)
+
+  ```java
+  public final native void wait(long timeoutMillis) throws InterruptedException;
+  ```
+
+* wait(long timeout, int nanos)
+
+  ```java
+  public final void wait(long timeoutMillis, int nanos) throws InterruptedException {
+      if (timeoutMillis < 0) {
+          throw new IllegalArgumentException("timeoutMillis value is negative");
+      }
+  
+      if (nanos < 0 || nanos > 999999) {
+          throw new IllegalArgumentException(
+              "nanosecond timeout value out of range");
+      }
+  
+      if (nanos > 0 && timeoutMillis < Long.MAX_VALUE) {
+          timeoutMillis++;
+      }
+  
+      wait(timeoutMillis);
+  }
+  ```
+
+* notify
+
+  ```java
+  @IntrinsicCandidate
+  public final native void notify();
+  ```
+
+* notifyall
+
+  ```java
+  @IntrinsicCandidate
+  public final native void notifyAll();
+  ```
 
 ## 2.1 toString方法
 
@@ -640,7 +733,7 @@ Date类中的多数方法已经过时，常用的方法有：`public long getTim
 
 ## 5.2 SimpleDateFormat类
 
-`java.text.DateFormat` 是日期/时间格式化子类的抽象类，我们通过这个类可以帮我们完成日期和文本之间的转换,也就是可以在Date对象与String对象之间进行来回转换。
+`java.text.DateFormat` 是日期 / 时间格式化子类的抽象类，我们通过这个类可以帮我们完成日期和文本之间的转换,也就是可以在Date对象与String对象之间进行来回转换。
 
 格式化：按照指定的格式，从Date对象转换为String对象。
 解析：按照指定的格式，从String对象转换为Date对象。
