--- a/1-Java基础/1-06【并发1-多线程】.md
+++ b/1-Java基础/1-06【并发1-多线程】.md
@@ -169,7 +169,7 @@ public static void main(String[] args) {
 - 进程间通信较为复杂
   - 同一台计算机的进程通信称为 `IPC`（`Inter-process communication`）
   - 不同计算机之间的进程通信，需要通过网络，并遵守共同的协议，例如 HTTP
-- 线程通信相对简单，因为它们共享进程内的内存，一个例子是多个线程可以访问同一个共享变量。
+- 线程通信相对简单，因为它们共享进程内的内存。例如多个线程可以访问同一个共享变量。
 - 线程更轻量，线程上下文切换成本一般上要比进程上下文切换低。进程切换涉及内存空间的切换而线程不会。因为每个进程都有自己的内存空间，而线程是共享所在进程的内存空间的，因此同一个进程中的线程进行线程切换时不涉及内存空间的转换。所以线程上下文切换成本低。
 
 ## 1.2 并发与并行
@@ -178,12 +178,12 @@ public static void main(String[] args) {
 
   在单核 cpu 下，线程实际还是串行执行的。
   操作系统中有一个组件叫做任务调度器，将 cpu 的时间片（windows 下时间片最小约为 15 毫秒）分给不同的程序使用，只是由于 cpu 在线程间（时间片很短）的切换非常快，人类感觉是同时运行的 。一般会将这种线程轮流使用 CPU 的做法称为并发（concurrent）。
-  两个及两个以上的作业在同一 时间段 内执行。
+  两个及两个以上的作业在同一时间段内执行。
 
 * **并行**
 
-  多核 cpu下，每个核（core） 都可以调度运行线程，这时候线程可以是并行的，不同的线程同时使用不同的cpu在执行。
-  两个及两个以上的作业在同一 时刻 执行。
+  多核 cpu下，每个核（core）都可以调度运行线程，这时候线程可以是并行的，不同的线程同时使用不同的cpu在执行。
+  两个及两个以上的作业在同一时刻执行。
 
 引用 Rob Pike 的一段描述：并发是同一时间应对（dealing with）多件事情的能力，并行（parallel）是同一时间动手做（doing）多件事情的能力。
 
@@ -218,7 +218,7 @@ public static void main(String[] args) {
 
 ## 1.5 操作系统线程五种状态
 
-五种状态的划分主要是从操作系统的层面进行划分的
+五种状态的划分主要是从操作系统的层面进行划分的：新建、就绪、运行、阻塞、死亡。
 
 <img src="..\图片\1-06【并发】\1-4线程5种状态.png" />
 
@@ -256,16 +256,16 @@ public static void main(String[] args) {
     }
 }
 // 输出信息如下：
-[5] Attach Listener // 添加事件
+[5] Attach Listener   // 添加事件
 [4] Signal Dispatcher // 分发处理给 JVM 信号的线程
-[3] Finalizer // 调用对象 finalize 方法的线程
+[3] Finalizer         // 调用对象 finalize 方法的线程
 [2] Reference Handler // 清除 reference 线程
-[1] main // main 线程,程序入口
+[1] main              // main 线程,程序入口
 ```
 
 ## 2.1 创建线程三种方法
 
-一共三种：Thread、Runnable配合Thread、FutureTask配合Thread。
+一共三种：Thread、Runnable 配合 Thread、FutureTask 配合 Callable。
 
 **Thread**
 
@@ -330,7 +330,7 @@ public class Demo01 {
 }
 ```
 
-Future 就是对于具体的 Runnable 或者 Callable 任务的执行结果进行取消、查询是否完成、获取结果。必要时可以通过get方法获取执行结果，该方法会阻塞直到任务返回结果。
+Future 就是对于具体的 Runnable 或者 Callable 任务的执行结果进行取消、查询是否完成、获取结果。必要时可以通过 get 方法获取执行结果，该方法会阻塞直到任务返回结果。
 
 追踪一下源码：
 
@@ -1547,7 +1547,7 @@ public class Demo01 {
             for (int i = 0; i < 5000; i++) {
                 synchronized(room) {
                     count++;
-                }    
+                }
             }
         });
 
