--- a/1-Java基础/1-06【并发3-内存模型、无锁】.md
+++ b/1-Java基础/1-06【并发3-内存模型、无锁】.md
@@ -1366,7 +1366,7 @@ AtomicInteger i = new AtomicInteger(0);
  
 // 获取并自增（i = 0, 结果 i = 1, 返回 0），类似于 i++ 
 System.out.println(i.getAndIncrement());
- 
+
 // 自增并获取（i = 1, 结果 i = 2, 返回 2），类似于 ++i 
 System.out.println(i.incrementAndGet());
  
@@ -1414,7 +1414,7 @@ public final int getAndUpdate(IntUnaryOperator updateFunction) {
 }
 ```
 
-底层使用的都是CAS。
+底层使用的都是CAS
 
 ## 5.3 原子引用
 
