--- a/1-Java基础/1-16【JVM1-内存结构】.md
+++ b/1-Java基础/1-16【JVM1-内存结构】.md
@@ -288,7 +288,7 @@ public class Main {
 java虚拟机规范允许栈的大小是动态的或者固定不变的。
 
 - 如果采用固定大小的java虚拟机栈，那每一个线程的Java虚拟机栈容量可以在线程创建的时候独立选定，如果线程请求分配的栈容量超过java虚拟机栈允许的最大容量，就会抛出`StackOverflowError`栈内存溢出异常。或者是栈帧过多导致栈内存已满，这样也会出现`StackOverflowError`栈内存溢出异常。
-- 如果栈可以动态扩展，在尝试扩展的时候无法申请到足够的内存，或者创建新线程时没有足够内存内存创建对应的虚拟机栈，就会抛出`OutOfMemoryError` 内存溢出异常。
+- 如果栈可以动态扩展，在尝试扩展的时候无法申请到足够的内存，或者创建新线程时没有足够内存创建对应的虚拟机栈，就会抛出`OutOfMemoryError` 内存溢出异常。
 
 每个线程的栈内存不是分配越大越好，因为Java分配给所有虚拟机栈的物理内存是一定的。每个线程的栈内存越大，虽然可以存放更多的栈帧，可以调用更多的方法，但是可执行的线程数就会越少。而且栈空间并不会被垃圾回收，无法调整gc来控制栈。
 
