--- a/7-扩展/7-00【通用基础知识】.md
+++ b/7-扩展/7-00【通用基础知识】.md
@@ -67,51 +67,28 @@
 
 ## 1.4 HTML转义字符
 
-```
-&copy;      版权      
-&reg;       注册商标
-&trade;     商标
-&nbsp;      空格
-&amp;       和号
-&quot;      引号
-&apos;      撇号
-&lt;        小于号
-&gt;        大于号
-&ne;        不等号
-&le;        小于等于
-&ge;        大于等于
-&cent;      分
-&pound;     磅
-&euro;      欧元
-&yen;       元
-&sect;      节
-&times;     乘号
-&divide;    除号
-&plusmn;    正负号
-```
-
-&copy;      版权      
-&reg;       注册商标
-&trade;     商标
-&nbsp;      空格
-&amp;       和号
-&quot;      引号
-&apos;      撇号
-&lt;        小于号
-&gt;        大于号
-&ne;        不等号
-&le;        小于等于
-&ge;        大于等于
-&cent;      分
-&pound;     磅
-&euro;      欧元
-&yen;       元
-&sect;      节
-&times;     乘号
-&divide;    除号
-&plusmn;    正负号
-
-
+| 显示结果 | 实体名称 | 描述                           |
+| -------- | -------- | ------------------------------ |
+|          | ` `      | 空格                           |
+| ©        | `©`      | 版权                           |
+| ®        | `®`      | 注册商标                       |
+| ™        | `™`      | 商标                           |
+| &        | `&`      | 和号                           |
+| "        | `"`      | 引号                           |
+| '        | `'`      | 撇号                           |
+| <        | `<`      | 小于号，是 less than 的缩写    |
+| >        | `>`      | 大于号，是 greater than 的缩写 |
+| ≠        | `≠`      | 不等号                         |
+| ≤        | `≤`      | 小于等于                       |
+| ≥        | `≥`      | 大于等于                       |
+| ¢        | `¢`      | 分                             |
+| £        | `£`      | 磅                             |
+| €        | `€`      | 欧元                           |
+| ¥        | `¥`      | 元                             |
+| §        | `§`      | 节                             |
+| ×        | `×`      | 乘号                           |
+| ÷        | `÷`      | 除号                           |
+| ±        | `±`      | 正负号                         |
 
 # 第二章 软件
 
