--- a/7-扩展/7-04【数据结构和算法-算法】.md
+++ b/7-扩展/7-04【数据结构和算法-算法】.md
@@ -623,7 +623,7 @@ public class MergeSort {
         return merge(split(left), split(right));
     }
 
-    // 归并排序-合并
+    // 归并排序-合并。这个合并更符合正常人的思想，但是我们要熟练使用上一种
     public static int[] merge(int[] left, int[] right) {
         int leftLen = left.length, rightLen = right.length;
         int i = 0, j = 0, k = 0;
@@ -760,6 +760,7 @@ public static void adjustHeap(int[] arr, int i, int length) {
             j++;
         }
         // 如果左右节点中较大的值大于i节点的值，那么就进行调整
+        // 因为没有真正的将i和j节点进行交换，所以这里一直需要用arr[j]和tmp来判断值
         if (arr[j] > tmp) {
             arr[i] = arr[j];
             // 防止接下来仍然需要调整
